--- a/wiki/Faq.wiki
+++ b/wiki/Faq.wiki
@@ -19,7 +19,7 @@ The Apache library very clearly did not meet our needs. It does not use generics
 
 An important difference between Apache Commons Collections and the Google Collections Library is that our collections very faithfully adhere to the contracts specified by the JDK interfaces they implement. If you review the Apache documentation, you'll find countless examples of violations. Deviating from standard collection behavior is risky!  You must be careful what you do with such a collection; bugs are always just waiting to happen.
 
-Our collections are fully generified and never violate their contracts (with isolated exceptions, where JDK implementations have set a strong precedent for acceptable violations). This means you can pass one of our collections to any method that expects a -Collection- and feel pretty confident that things will work exactly as they should.
+Our collections are fully generified and never violate their contracts (with isolated exceptions, where JDK implementations have set a strong precedent for acceptable violations). This means you can pass one of our collections to any method that expects a `Collection` and feel pretty confident that things will work exactly as they should.
 
 == Why build on Java 5, instead of 6? ==
 
@@ -59,27 +59,27 @@ It is impossible to implement correctly without making this simple utility horri
 
 == Why are your collections final? ==
 
-== Why are the names -Multiset- and -Multimap-, not -MultiSet- and -MultiMap-? ==
+== Why are the names `Multiset` and `Multimap`, not `MultiSet` and `MultiMap`? ==
 
 Because "multiset" is a single, unhyphenated word, and we don't capitalize random letters inside those unless we have a good reason to.
 
-== Aha, but "bimap" is also a single word!  So why is it -!BiMap-, not -Bimap-? ==
+== Aha, but "bimap" is also a single word!  So why is it `!BiMap`, not `Bimap`? ==
 
-Well, because we had a good reason to!  :)  A -!BiMap- is also a -Map-; it extends the -Map- interface, and we felt it was important to make that connection clear. This is not the case for -Multimap-, nor does -Multiset- extend -Set-.
+Well, because we had a good reason to!  :)  A `!BiMap` is also a `Map`; it extends the `Map` interface, and we felt it was important to make that connection clear. This is not the case for `Multimap`, nor does `Multiset` extend `Set`.
 
-== Why does -!BiMap.put()- throw an exception when the value is already present, instead of just remapping the value? ==
+== Why does `!BiMap.put()` throw an exception when the value is already present, instead of just remapping the value? ==
 
-Because this method comes from the Map interface, and such behavior on a -Map- would violate the principle of least surprise. We added the method -BiMap.forcePut()- to offer the behavior described.
+Because this method comes from the Map interface, and such behavior on a `Map` would violate the principle of least surprise. We added the method `BiMap.forcePut()` to offer the behavior described.
 
-== Why is -!BiMap.putAll()- is allowed to leave the bimap in an indeterminate state if it throws an exception? ==
+== Why is `!BiMap.putAll()` is allowed to leave the bimap in an indeterminate state if it throws an exception? ==
 
-In general, a method that throws an exception ought to leave the instance with its state unchanged. However, this is not always feasible. For a typical bimap implementation, it would be downright ugly, and slow. Note that this is no different from the regular behavior of -Map.putAll()-, -Collection.addAll()-, etc.
+In general, a method that throws an exception ought to leave the instance with its state unchanged. However, this is not always feasible. For a typical bimap implementation, it would be downright ugly, and slow. Note that this is no different from the regular behavior of `Map.putAll()`, `Collection.addAll()`, etc.
 
-== Why does -!BiMap- have no -getKeyForValue()- method? ==
+== Why does `!BiMap` have no `getKeyForValue()` method? ==
 
-We did think about it (Doug Lea even half-jokingly suggested naming it -teg()-!). But you don't really need it; just call -inverse().get()-. If this method did exist, every implementor of the interface would have to write it over again, and would probably do it exactly like that.
+We did think about it (Doug Lea even half-jokingly suggested naming it `teg()`!). But you don't really need it; just call `inverse().get()`. If this method did exist, every implementor of the interface would have to write it over again, and would probably do it exactly like that.
 
-== -!ClassToInstanceMap- is interesting, but I need to map a type -T- to a -Foo<T>- / I need a !ClassToInstanceMultimap / etc. How? ==
+== `!ClassToInstanceMap` is interesting, but I need to map a type `T` to a `Foo<T>` / I need a !ClassToInstanceMultimap / etc. How? ==
 
 If your goal is to maintain type-safety and avoid casts when using the API "normally", but you don't care to go to great lengths to _prevent_ the wrong types of objects being added, it's always been easy to do this yourself:
 
@@ -95,22 +95,22 @@ If your goal is to maintain type-safety and avoid casts when using the API "norm
   }
 }}}
 
-If you want the added protection, you can extend !ForwardingMap and use it in conjunction with -Constraints.constrainedMap()-.
+If you want the added protection, you can extend !ForwardingMap and use it in conjunction with `Constraints.constrainedMap()`.
 
-== Why do you use the type -<E extends Comparable>- in various APIs, which is not "fully generified"?  Shouldn't it be -<E extends Comparable<?>>-, -<E extends Comparable<E>>- or -<E extends Comparable<? super E>>- ? ==
+== Why do you use the type `<E extends Comparable>` in various APIs, which is not "fully generified"?  Shouldn't it be `<E extends Comparable<?>>`, `<E extends Comparable<E>>` or `<E extends Comparable<? super E>>`? ==
 
 Many reasons. For one, if we used any of these constructs, you would not be able to use our API with pre-Java-5 objects, like Joda-Time's !DateTime (which we use heavily here). No cast can fix that. Secondly, the "correct" syntax (the last one) does not play nicely with javac's type inference capabilities in certain cases.
 
-The only difference between our type and the "correct" type is that the "correct" construct would not be assignable from a deviant type which was comparable to something, but not comparable to itself, for example -Foo implements Comparable<String>-. In our opinion, creating such a type in the first place is already asking for trouble, as most APIs that accept a -Comparable- elements expect those elements to be mutually comparable.
+The only difference between our type and the "correct" type is that the "correct" construct would not be assignable from a deviant type which was comparable to something, but not comparable to itself, for example `Foo implements Comparable<String>`. In our opinion, creating such a type in the first place is already asking for trouble, as most APIs that accept a `Comparable` elements expect those elements to be mutually comparable.
 
-== Why does -Multimap- have no -putAll(K, Iterable<V>)- or -putAll(Map<K,V>)- methods? ==
+== Why does `Multimap` have no `putAll(K, Iterable<V>)` or `putAll(Map<K,V>)` methods? ==
 
-These operations can be performed rather simply. First, it's important to realize that the -get(key)- method of -Multimap- returns a "live view" of the collection corresponding to that key. So, -multimap.get(myKey).putAll(myValues)- accomplishes the first task.
+These operations can be performed rather simply. First, it's important to realize that the `get(key)` method of `Multimap` returns a "live view" of the collection corresponding to that key. So, `multimap.get(myKey).putAll(myValues)` accomplishes the first task.
 
-The second task is also simple to perform, because any -Map- can be viewed as a -Multimap-: -multimap.putAll(Multimaps.forMap(map))-.
+The second task is also simple to perform, because any `Map` can be viewed as a `Multimap`: `multimap.putAll(Multimaps.forMap(map))`.
 
-These "workarounds" are simple enough that we did not want to add two additional methods to -Multimap- interface, which is already quite large enough as it is.
+These "workarounds" are simple enough that we did not want to add two additional methods to `Multimap` interface, which is already quite large enough as it is.
 
-== Why do you have your own -@Nullable- annotation, when there's the !JetBrains annotations, and JSR-305 and . . .? ==
+== Why do you have your own `@Nullable` annotation, when there's the !JetBrains annotations, and JSR-305 and . . .? ==
 
-We will figure out what to do about this situation before releasing 1.0. We've always seen our -@Nullable- as a stopgap measure only.
+We will figure out what to do about this situation before releasing 1.0. We've always seen our `@Nullable` as a stopgap measure only.
