--- a/wiki/Faq.wiki
+++ b/wiki/Faq.wiki
@@ -53,7 +53,11 @@ toString() is harmless, though it could take arbitrarily long to run if the data
 
 It is impossible to implement correctly without making this simple utility horribly complicated, and even then it would not work for many purposes.
 
-== Why are your collections final? ==
+== Why are so many implementation classes marked -final-? ==
+
+Designing and documenting classes of a public API to be extended safely is hard, and time-consuming. And in most cases when you'd be interested in extending a collection, you can just write a decorator for it instead. We've even provided the "forwarding collections" to make writing decorators easy.
+
+If there are final classes that you have a valid need to subclass, we'll consider these on a case-by-case basis.
 
 == Why are the names `Multiset` and `Multimap`, not `MultiSet` and `MultiMap`? ==
 
