--- a/wiki/Acknowledgements.wiki
+++ b/wiki/Acknowledgements.wiki
@@ -2,8 +2,8 @@
 
 Primary authors: Kevin Bourrillion, Jared Levy, Mike Bostock.
 
-Google is a _very_ collaborative environment, and the "long tail" of Googlers who have contributed in a meaningful way to the library that you see here goes a long, long way.  If I tried to count every person who helped with a random bug fix, speedup, warning cleanup, new utility method, code review, or participating in the debate over the thorny design issue of the week -- I think I would probably hit three digits.
+Google is a _very_ collaborative environment, and the "long tail" of Googlers who have contributed in a meaningful way to this library goes on as far as the eye can see. It's this collaboration, together with the meticulous oversight of the primary authors, that has made this library so damn good.
 
-We appreciate the contributions of every one of these individuals even inasmuch as we could never attempt to list them all!
+If we tried to name every person who helped with a random bug report, bug fix, speedup, warning cleanup, new utility method, code review, code review, code review, or participating helpfully in the debate over the thorny design issue of the week -- I think we would end up listing close to a hundred people!
 
-Special thanks are due to:
+We clearly cannot list everyone by name, but we are very thankful for their help.
