--- a/wiki/Acknowledgements.wiki
+++ b/wiki/Acknowledgements.wiki
@@ -1,6 +1,6 @@
 Primary authors: Kevin Bourrillion, Jared Levy, Mike Bostock.
 
-Google is a very collaborative environment, and the "long tail" of Googlers who have contributed in a meaningful way to this library goes on as far as the eye can see. It's this collaboration, together with the meticulous oversight of the primary authors, that has made this library so damn good.
+Google is a very collaborative environment, and the "long tail" of Googlers who have contributed in a meaningful way to this library goes on as far as the eye can see. It's this collaboration, together with the meticulous oversight of the primary authors, that has made this library what it is today.
 
 If we tried to name every person who contributed with a random bug report, bug fix, speedup, warning cleanup, new utility method, code review, code review, code review, or by participating helpfully in the debate over the thorny design issue of the week -- we would end up listing close to a hundred people!  So please forgive us for not being able to thank you individually; we thank you nonetheless.
 
