Edited wiki page through web user interface.

--- a/wiki/Faq.wiki
+++ b/wiki/Faq.wiki
@@ -39,7 +39,7 @@ Don't worry, the tests are coming over shortly.
 
 In general, our methods do not require a `Collection` to be passed in when an `Iterable` or `Iterator` would suffice. This distinction is important to us, as sometimes at Google we work with very large quantities of data, which may be too large to fit in memory, but which can be traversed from beginning to end in the course of some computation. Such data structures _can_ be implemented as collections, but most of their methods would have to either throw an exception, return a wrong answer, or perform abysmally. For these situations, `Collection` is a very poor fit; a square peg in a round hole.
 
-An -Iterator- represents a one-way scrollable "stream" of elements, and an -Iterable- is anything which can spawn independent iterators. A -Collection- is much, much more than this, so we only require it when we need to.
+An `Iterator` represents a one-way scrollable "stream" of elements, and an `Iterable` is anything which can spawn independent iterators. A `Collection` is much, much more than this, so we only require it when we need to.
 
 == Why do the non-Collection iterables you return implement `toString()` but not `equals()` or `hashCode()`? ==
 
@@ -114,3 +114,4 @@ These "workarounds" are simple enough that we did not want to add two additional
 == Why do you have your own `@Nullable` annotation, when there's the !JetBrains annotations, and JSR-305 and . . .? ==
 
 We will figure out what to do about this situation before releasing 1.0. We've always seen our `@Nullable` as a stopgap measure only.
+ 
